--- a/src/app/main/content/board/board.component.scss
+++ b/src/app/main/content/board/board.component.scss
@@ -298,7 +298,7 @@ app-single-task {
   transition: transform 250ms cubic-bezier(0, 0, 0.2, 1);
 }
 
-/* Mobile  */
+/* --------------------------------------------------------------------- Mobile ---------------------------------------------------------------------  */
 
 @media (max-width: 1150px) {
   section {
@@ -316,6 +316,10 @@ app-single-task {
 }
 
 @media (max-width: 860px) {
+section{
+  height: auto;
+}
+
   .board_header {
     @include dFlex($ai: center, $jc: flex-start, $g: 24px);
     flex-direction: column;
@@ -372,21 +376,25 @@ app-single-task {
   .to_do {
     width: 100%;
     padding-bottom: 32px;
+    height: auto;
   }
 
   .in_progress {
     width: 100%;
     padding-bottom: 32px;
+    height: auto;
   }
 
   .await_feedback {
     width: 100%;
     padding-bottom: 32px;
+    height: auto;
   }
 
   .done {
     width: 100%;
     padding-bottom: 32px;
+    height: auto;
   }
 }
 
