--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -2,7 +2,7 @@
   <div class="board_header">
     <div class="board_header_left">
       <h1>Board</h1>
-      <div class="mobile_add_task_btn">
+      <div class="mobile_add_task_btn" (click)="naviService.setSelectedItem(1)">
         <img src="assets/img/icons/plus_icon.svg" alt="" />
       </div>
     </div>
