add-task style fixes

--- a/src/app/main/content/add-task/add-task.component.html
+++ b/src/app/main/content/add-task/add-task.component.html
@@ -110,7 +110,7 @@
       <div class="line"></div>
 
       <div class="right">
-        <div class="choice date-input">
+        <div class="choice">
           <label for="dueDate">Due date<span>*</span></label>
           <div>
             <input
