refactoring: task card progress bar

--- a/src/app/main/content/board/single-task/single-task.component.html
+++ b/src/app/main/content/board/single-task/single-task.component.html
@@ -144,12 +144,16 @@
 
     <div class="task_card_substasks">
       <div class="subtasks_progress">
-        <div class="progress_outer">
+        <!-- <div class="progress_outer">
           <div
             class="progress_inner"
             [style.width]="getSubtasksProgress() + '%'"
           ></div>
-        </div>
+        </div> -->
+        <progress 
+          [value]="getCompletedSubtasksCount()" 
+          [max]="task.subtasks?.length || 0"
+       ></progress>
       </div>
       <p>
         @if (task.subtasks && task.subtasks.length > 0) {
