--- a/src/app/main/content/summary/summary.component.html
+++ b/src/app/main/content/summary/summary.component.html
@@ -1,5 +1,11 @@
 <p>summary works!</p>
 
 <button (click)="get()">Ausgabe Listen</button>
-<button (click)="get2()">test</button>
+<button (click)="get2()">Gefiltert</button>
 
+<input
+type="text"
+id="subtasks"
+name="searchTerm"
+[(ngModel)]="searchTerm"
+/>
