--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -67,7 +67,7 @@ form {
       }
     }
 
-    >div {
+    > div {
       width: 100%;
 
       .input {
@@ -137,8 +137,8 @@ form {
 
     .assigned {
       @include font($fs: 20px, $fw: 400);
-        color: $dark_blue;
-        height: 24px;
+      color: $dark_blue;
+      height: 24px;
     }
 
     .assigned_field_headline {
@@ -322,7 +322,7 @@ form {
     color: $red;
   }
 
-  >div {
+  > div {
     width: 100%;
 
     input {
@@ -641,7 +641,7 @@ ul {
   @include font($fs: 16px, $fw: 400);
   margin-bottom: 20px;
 
-  >p span {
+  > p span {
     color: $red;
   }
 }
@@ -655,7 +655,7 @@ ul {
   display: flex;
   align-items: center;
 
-  >img {
+  > img {
     margin-left: 3px;
   }
 }
@@ -666,7 +666,6 @@ ul {
   white-space: nowrap;
   font-size: 21px;
   font-weight: 700;
-
 
   &:hover {
     background-color: $light_blue;
@@ -685,7 +684,8 @@ ul {
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 
     img {
-      filter: invert(56%) sepia(34%) saturate(507%) hue-rotate(165deg) brightness(98%) contrast(95%);
+      filter: invert(56%) sepia(34%) saturate(507%) hue-rotate(165deg)
+        brightness(98%) contrast(95%);
     }
   }
 }
@@ -693,6 +693,17 @@ ul {
 .btn-submit-section {
   @include dFlex($jc: space-between, $g: 30px);
   margin-top: 4px;
+}
+
+.column {
+  @include dFlex($jc: space-between);
+  flex-direction: column !important;
+}
+
+.ok-btn {
+  position: absolute;
+  bottom: 24px;
+  right: 32px;
 }
 
 /*--------------------------------------------------   Mobile   --------------------------------------------------*/
@@ -708,7 +719,6 @@ ul {
   }
 
   form {
-    @include dFlex($jc: space-between);
     flex-direction: column;
     height: calc(100vh - 91px - 190px);
   }
@@ -849,7 +859,7 @@ ul {
 
     .input-container {
       input {
-          @include font($fs: 16px, $fw: 400);
+        @include font($fs: 16px, $fw: 400);
       }
     }
   }
