--- a/src/app/main/content/board/single-task/single-task.component.html
+++ b/src/app/main/content/board/single-task/single-task.component.html
@@ -26,7 +26,7 @@
         </button>
       </div>
 
-      @if(taskService.isEditModusActivated){
+      @if(taskService.isEditModeActivated){
         <div>
         <app-add-task></app-add-task>
       </div>
