--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,6 +39,8 @@ a {
 ::-webkit-scrollbar-track {
   background: #f1f1f1;
   border-radius: 4px;
+  margin-top: 20px;   // Oben Abstand lassen
+  margin-bottom: 20px; // Unten Abstand lassen
 }
 
 ::-webkit-scrollbar-thumb {
