--- a/src/app/main/content/add-task/add-task.component.scss
+++ b/src/app/main/content/add-task/add-task.component.scss
@@ -44,8 +44,6 @@ form {
   color: $red;
 }
 
-
-
 /*linkes Div*/
 .content {
   @include dFlex($ai: flex-start, $g: 20px);
@@ -502,8 +500,6 @@ form {
   top: -15px;
   left: 0;
   box-shadow: 0px 0px 14px 3px rgba(0, 0, 0, 0.4);
-
-  // @include dFlex($jc:space-between);
   flex-direction: column;
   justify-content: space-between;
   gap: 10px;
@@ -523,7 +519,7 @@ form {
 }
 
 .error-border {
-  border-color: $red; // Wenn Fehler, rote Grenze
+  border-color: $red;
 }
 
 .selected {
@@ -703,8 +699,7 @@ ul {
 
 .column {
   @include dFlex($jc: space-between);
-  flex-direction: column !important;  
- 
+  flex-direction: column !important;
 }
 
 .ok-btn {
@@ -713,7 +708,7 @@ ul {
   right: 32px;
 }
 
-.maxWidth{
+.maxWidth {
   max-width: 480px;
 }
 
@@ -922,5 +917,67 @@ ul {
   .btn-submit-section {
     @include dFlex($ai: flex-end, $g: 20px);
     flex-direction: column;
+  }
+}
+
+// Add task to board
+
+.task-toast {
+  @include dFlex($g: 16px);
+  position: fixed;
+  bottom: 250px;
+  right: 40%;
+  background-color: $dark_blue;
+  color: $white;
+  padding: 24px 24px;
+  border-radius: 24px;
+  font-size: 20px;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+  z-index: 30;
+  opacity: 0;
+  transform: translateX(150%);
+  animation: slide-in 0.125s ease-in forwards,
+    slide-out 0.125s ease-out 1.5s forwards;
+
+  > img {
+    height: 24px;
+    width: 24px;
+  }
+
+  @media (max-width: 768px) {
+    right: 25%;
+  }
+
+  @media (max-width: 480px) {
+    font-size: 18px;
+    right: 15%;
+  }
+
+  @media (max-width: 375px) {
+    right: 12%;
+  }
+}
+
+@keyframes slide-in {
+  0% {
+    transform: translateX(250%);
+    opacity: 0;
+  }
+
+  100% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+}
+
+@keyframes slide-out {
+  0% {
+    transform: translateX(0%);
+    opacity: 1;
+  }
+
+  100% {
+    transform: translateX(250%);
+    opacity: 0;
   }
 }
