Error msg for inprogress

--- a/src/app/main/content/board/board.component.html
+++ b/src/app/main/content/board/board.component.html
@@ -103,7 +103,7 @@
         @for (task of this.filterList(this.taskService.progressList); track
         task) {
         <app-single-task
-          (click)="setType('inprogess')"
+          (click)="setType('inprogress')"
           [task]="task"
           cdkDrag
         ></app-single-task>
