--- a/src/app/main/content/board/single-task/single-task.component.html
+++ b/src/app/main/content/board/single-task/single-task.component.html
@@ -71,8 +71,10 @@
       <div class="assigned-to">
         <p>Assigned To:</p>
         <div class="assignees">
-          @for (id of selectedTask?.assignedTo; track $index) { @for(contact of
-          contactService.contactList; track $index) { @if(id == contact.id) {
+          @for (id of selectedTask?.assignedTo; track $index) { 
+            @for(contact of
+          contactService.contactList; track $index) { 
+            @if(id == contact.id) {
           <div class="assignee">
             <div
               class="profile_badge"
@@ -89,7 +91,7 @@
       <div class="subtasks">
         <p>Subtasks</p>
         @if (selectedTask?.subtasks) { 
-          @for (subtask of selectedTask?.subtasks; track subtask) {
+          @for (subtask of selectedTask?.subtasks; track $index) {
         <div class="subtask" (click)="toggleSubtaskCompleted(subtask, selectedTask)">
           @if(subtask.IsCompleted){
           <img
